layouts 적용 완료 + header 부트스트랩 적용

--- a/src/main/resources/templates/layouts/footer.mustache
+++ b/src/main/resources/templates/layouts/footer.mustache
@@ -1,7 +1,6 @@
+<footer class="footer">
 
-
-    <div class="mb-5 container-fluid">
-        <hr>
-        <p>{{id}} @ KooBoard <a href="localhost:8080">Privacy</a> <a
-                href="#">Terms</a></p>
+    <div class="mb-5 container-fluid"> <hr>
+        <p>@ Board <a href="/hi">Privacy</a> <a href="#">Terms</a></p>
     </div>
+</footer>
