--- a/src/main/resources/templates/articles/new.mustache
+++ b/src/main/resources/templates/articles/new.mustache
@@ -17,4 +17,14 @@
 
     <a href="/articles">back</a>
 </form>
+
+
+<form class="container2" action="/articles/delete" method="get">
+    <button type="submit">데이터 전체삭제</button>
+</form>
+
+<form class="container2" action="/articles/findall" method="get">
+    <button type="submit">데이터 전체호출</button>
+</form>
+
 {{>layouts/footer}}
