--- a/src/main/resources/templates/articles/new.mustache
+++ b/src/main/resources/templates/articles/new.mustache
@@ -20,7 +20,7 @@
 
 
 <form class="container2" action="/articles/delete" method="get">
-    <button type="submit">데이터 전체삭제</button>
+    <button type="submit" class="btn btn-danger">데이터 전체삭제</button>
 </form>
 
 <form class="container2" action="/articles/findall" method="get">
