show페이지, list페이지 구현

--- a/src/main/resources/templates/articles/findall.mustache
+++ b/src/main/resources/templates/articles/findall.mustache
@@ -1,5 +1,13 @@
 {{>layouts/header}}
-{{name}} {{title}} {{contents}}
+<div>
+    {{#list}}
+        id : {{id}}
+        title : {{title}}
+        contents : {{contents}}
+        <br>
 
+    {{/list}}
+    이 페이지는 list 입니다.
+</div>
 
 {{>layouts/footer}}
