--- a/src/main/resources/templates/articles/new.mustache
+++ b/src/main/resources/templates/articles/new.mustache
@@ -23,7 +23,7 @@
     <button type="submit" class="btn btn-danger">데이터 전체삭제</button>
 </form>
 
-<form class="container2" action="/articles/findall" method="get">
+<form class="container2" action="/articles/list" method="get">
     <button type="submit">데이터 전체호출</button>
 </form>
 
