--- a/src/main/resources/templates/layouts/header.mustache
+++ b/src/main/resources/templates/layouts/header.mustache
@@ -44,3 +44,8 @@
         </div>
     </div>
 </nav>
+
+<form action="/articles/new" method="get">
+    <button type="submit">DAO 페이지</button>
+</form>
+
