--- a/src/main/resources/templates/layouts/header.mustache
+++ b/src/main/resources/templates/layouts/header.mustache
@@ -46,6 +46,6 @@
 </nav>
 
 <form action="/articles/new" method="get">
-    <button type="submit">DAO 페이지</button>
+    <button type="submit" class="btn btn-info">DAO 페이지</button>
 </form>
 
