--- a/src/main/resources/templates/articles/findall.mustache
+++ b/src/main/resources/templates/articles/findall.mustache
@@ -5,15 +5,15 @@
         <thead class="thead-dark">
         <tr>
             <th scope="col">#</th>
-            <th scope="col">First</th>
-            <th scope="col">Last</th>
+            <th scope="col">Title</th>
+            <th scope="col">Contents</th>
         </tr>
         </thead>
         <tbody>
         {{#list}}
         <tr>
             <th scope="row">{{id}}</th>
-            <td>{{title}}</td>
+            <td><a href="/articles/{{id}}"> {{title}}</a></td>
             <td>{{contents}} <br></td>
         </tr>
         {{/list}}
