--- a/src/main/resources/templates/articles/hospital.mustache
+++ b/src/main/resources/templates/articles/hospital.mustache
@@ -15,13 +15,24 @@
                 <th scope="row">{{id}}</th>
                 <td>{{openServiceName}}</a></td>
                 <td>{{openLocalGovernmentCode}} <br></td>
-                <td> </td>
-                <td> </td>
-                <td> </td>
-                <td> </td>
-                <td> </td>
-                <td> </td>
-                <td> </td>
+                private String hospitalName;
+                @Column
+                private String businessTypeName;
+                @Column
+                private int healthcareProviderCount;
+                @Column
+                private int patientRoomCount;
+                @Column
+                private int totalNumberOfBeds;
+                @Column
+                private float totalAreaSize;
+                <td>{{managementNumber}} </td>
+                <td>{{licenseDate}} </td>
+                <td> {{businessStatus}}</td>
+                <td> {{businessStatusCode}}</td>
+                <td>{{phone}} </td>
+                <td>{{fullAddress}} </td>
+                <td> {{roadNameAddress}}</td>
                 <td> </td>
             </tr>
         {{/list}}
