--- a/src/main/resources/templates/articles/hospital.mustache
+++ b/src/main/resources/templates/articles/hospital.mustache
@@ -4,9 +4,22 @@
     <table class="table">
         <thead class="thead-dark">
         <tr>
-            <th scope="col">#</th>
-            <th scope="col">Title</th>
-            <th scope="col">Contents</th>
+            <th scope="col">id</th>
+            <th scope="col">서비스이름</th>
+            <th scope="col">지역번호</th>
+            <th scope="col">관리번호</th>
+            <th scope="col">라이센스날짜</th>
+            <th scope="col">영업상태</th>
+            <th scope="col">영업코드</th>
+            <th scope="col">전화번호</th>
+            <th scope="col">전체주소</th>
+            <th scope="col">도로주소</th>
+            <th scope="col">병원이름</th>
+            <th scope="col">기업정보</th>
+            <th scope="col">의료인수</th>
+            <th scope="col">병동수</th>
+            <th scope="col">전체침구수</th>
+            <th scope="col">면적</th>
         </tr>
         </thead>
         <tbody>
@@ -15,17 +28,6 @@
                 <th scope="row">{{id}}</th>
                 <td>{{openServiceName}}</a></td>
                 <td>{{openLocalGovernmentCode}} <br></td>
-                private String hospitalName;
-                @Column
-                private String businessTypeName;
-                @Column
-                private int healthcareProviderCount;
-                @Column
-                private int patientRoomCount;
-                @Column
-                private int totalNumberOfBeds;
-                @Column
-                private float totalAreaSize;
                 <td>{{managementNumber}} </td>
                 <td>{{licenseDate}} </td>
                 <td> {{businessStatus}}</td>
@@ -33,7 +35,12 @@
                 <td>{{phone}} </td>
                 <td>{{fullAddress}} </td>
                 <td> {{roadNameAddress}}</td>
-                <td> </td>
+                <td> {{hospitalName}}</td>
+                <td>{{businessTypeName}}</td>
+                <td>{{healthcareProviderCount}}</td>
+                <td>{{patientRoomCount}}</td>
+                <td>{{totalNumberOfBeds}}</td>
+                <td>{{totalAreaSize}}</td>
             </tr>
         {{/list}}
         </tbody>
