--- a/src/main/resources/templates/layouts/header.mustache
+++ b/src/main/resources/templates/layouts/header.mustache
@@ -56,14 +56,20 @@
             </td>
 
             <td>
-                <form class="container2" action="/articles/delete" method="get">
+                <form action="/articles/delete" method="get">
                     <button type="submit" class="btn btn-danger">데이터 전체삭제</button>
                 </form>
             </td>
 
             <td>
-                <form class="container2" action="/articles/list" method="get">
+                <form action="/articles/list" method="get">
                     <button type="submit" class="btn btn-success">데이터 전체호출</button>
+                </form>
+            </td>
+
+            <td>
+                <form action="/articles/edit" method="get">
+                    <button type="submit" class="btn btn-warning">데이터 수정</button>
                 </form>
             </td>
         </tr>
