댓글기능 추가중 + 도커 띄우기

--- a/src/main/resources/templates/articles/findall.mustache
+++ b/src/main/resources/templates/articles/findall.mustache
@@ -1,6 +1,13 @@
 {{>layouts/header}}
 
 <div>
+    {{#header}}
+
+    {{/header}}
+    {{^header}}
+
+    {{/header}}
+
     <table class="table">
         <thead class="thead-dark">
         <tr>
