--- a/src/main/resources/templates/layouts/header.mustache
+++ b/src/main/resources/templates/layouts/header.mustache
@@ -67,6 +67,12 @@
                 </form>
             </td>
 
+            <td>
+                <form action="/hospital/all" method="get">
+                    <button type="submit" class="btn btn-success">병원데이터 출력</button>
+                </form>
+            </td>
+
 
         </tr>
         </thead>
