환경변수 수정 + db 연동

--- a/src/main/resources/templates/articles/findall.mustache
+++ b/src/main/resources/templates/articles/findall.mustache
@@ -21,7 +21,7 @@
         <tr>
             <th scope="row">{{id}}</th>
             <td><a href="/articles/{{id}}"> {{title}}</a></td>
-            <td>{{contents}} <br></td>
+            <td>{{content}} <br></td>
         </tr>
         {{/list}}
         </tbody>
