--- a/src/main/resources/templates/show.mustache
+++ b/src/main/resources/templates/show.mustache
@@ -1,7 +1,7 @@
 {{>layouts/header}}
 <div>
     {{#article}}
-        {{id}} {{title}} {{contents}}
+        {{id}} {{title}} {{content}}
 
     이 페이지는 show 입니다.
 </div>
