페이징 기법 + 도커파일 와일드카드 + 컨트롤러 수정

--- a/src/main/resources/templates/articles/hospital.mustache
+++ b/src/main/resources/templates/articles/hospital.mustache
@@ -1,6 +1,8 @@
 {{>layouts/header}}
 
 <div>
+
+
     <table class="table">
         <thead class="thead-dark">
         <tr>
@@ -45,6 +47,11 @@
         {{/list}}
         </tbody>
     </table>
+
+    <ul class="pagination justify-content-center">
+        <li class="page-item"><a class="page-link" href="?page={{previous}}">Previous</a></li>
+        <li class="page-item"><a class="page-link" href="?page={{next}}">Next</a></li>
+    </ul>
 
 </div>
 
