--- a/src/main/resources/templates/show.mustache
+++ b/src/main/resources/templates/show.mustache
@@ -16,6 +16,11 @@
                 <button type="submit" class="btn btn-danger">데이터 삭제</button>
             </form>
         </td>
+        <td>
+            <form action="/articles/list" method="get">
+                <button type="submit" class="btn btn-success">목록으로</button>
+            </form>
+        </td>
     {{/article}}
 
 {{>layouts/footer}}
