--- a/src/main/resources/templates/layouts/header.mustache
+++ b/src/main/resources/templates/layouts/header.mustache
@@ -51,22 +51,19 @@
         <tr>
             <td>
                 <form action="/articles/new" method="get">
-                    <button type="submit" class="btn btn-info">DAO 페이지</button>
+                    <button type="submit" class="btn btn-info">게시판 데이터 입력</button>
                 </form>
             </td>
-
+            <td>
+                <form action="/articles/list" method="get">
+                    <button type="submit" class="btn btn-success">게시판 데이터 출력</button>
+                </form>
+            </td>
             <td>
                 <form action="/articles/delete" method="get">
                     <button type="submit" class="btn btn-danger">데이터 전체삭제</button>
                 </form>
             </td>
-
-            <td>
-                <form action="/articles/list" method="get">
-                    <button type="submit" class="btn btn-success">데이터 전체호출</button>
-                </form>
-            </td>
-
             <td>
                 <form action="/hospital/all" method="get">
                     <button type="submit" class="btn btn-success">병원데이터 출력</button>
