--- a/src/main/resources/templates/articles/hospital.mustache
+++ b/src/main/resources/templates/articles/hospital.mustache
@@ -29,20 +29,20 @@
             <tr>
                 <th scope="row">{{id}}</th>
                 <td>{{openServiceName}}</a></td>
-                <td>{{openLocalGovernmentCode}} <br></td>
-                <td>{{managementNumber}} </td>
-                <td>{{licenseDate}} </td>
-                <td> {{businessStatus}}</td>
-                <td> {{businessStatusCode}}</td>
-                <td>{{phone}} </td>
-                <td>{{fullAddress}} </td>
-                <td> {{roadNameAddress}}</td>
-                <td> {{hospitalName}}</td>
-                <td>{{businessTypeName}}</td>
-                <td>{{healthcareProviderCount}}</td>
-                <td>{{patientRoomCount}}</td>
-                <td>{{totalNumberOfBeds}}</td>
-                <td>{{totalAreaSize}}</td>
+<!--                <td>{{openLocalGovernmentCode}} <br></td>-->
+<!--                <td>{{managementNumber}} </td>-->
+<!--                <td>{{licenseDate}} </td>-->
+<!--                <td> {{businessStatus}}</td>-->
+<!--                <td> {{businessStatusCode}}</td>-->
+<!--                <td>{{phone}} </td>-->
+<!--                <td>{{fullAddress}} </td>-->
+<!--                <td> {{roadNameAddress}}</td>-->
+<!--                <td> {{hospitalName}}</td>-->
+<!--                <td>{{businessTypeName}}</td>-->
+<!--                <td>{{healthcareProviderCount}}</td>-->
+<!--                <td>{{patientRoomCount}}</td>-->
+<!--                <td>{{totalNumberOfBeds}}</td>-->
+<!--                <td>{{totalAreaSize}}</td>-->
             </tr>
         {{/list}}
         </tbody>
