--- a/src/main/resources/templates/layouts/header.mustache
+++ b/src/main/resources/templates/layouts/header.mustache
@@ -35,6 +35,15 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link disabled">Disabled</a>
+                    <option selected>업태구분명 선택</option>
+                    <option value="치과의원">치과의원</option>
+                    <option value="한의원">한의원</option>
+                    <option value="의원">의원</option>
+                    <option value="보건진료소">보건진료소</option>
+                    <option value="보건지소">보건지소</option>
+                    <option value="보건소">보건소</option>
+                    <option value="조산원">조산원</option>
+                    <option value="보건의료원">보건의료원</option>
                 </li>
             </ul>
             <form class="d-flex" role="search">
@@ -69,6 +78,9 @@
                     <button type="submit" class="btn btn-success">병원데이터 출력</button>
                 </form>
             </td>
+
+
+
 
 
         </tr>
