--- a/src/main/resources/templates/layouts/header.mustache
+++ b/src/main/resources/templates/layouts/header.mustache
@@ -33,8 +33,9 @@
                         <li><a class="dropdown-item" href="#">Something else here</a></li>
                     </ul>
                 </li>
+
                 <li class="nav-item">
-                    <a class="nav-link disabled">Disabled</a>
+                    <select id ="select_choice">
                     <option selected>업태구분명 선택</option>
                     <option value="치과의원">치과의원</option>
                     <option value="한의원">한의원</option>
@@ -44,9 +45,10 @@
                     <option value="보건소">보건소</option>
                     <option value="조산원">조산원</option>
                     <option value="보건의료원">보건의료원</option>
+                    </select>
                 </li>
             </ul>
-            <form class="d-flex" role="search">
+            <form class="d-flex" role="search" action="/hospital/">
                 <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                 <button class="btn btn-outline-success" type="submit">Search</button>
             </form>
