--- a/src/main/resources/templates/layouts/header.mustache
+++ b/src/main/resources/templates/layouts/header.mustache
@@ -76,7 +76,7 @@
                 </form>
             </td>
             <td>
-                <form action="/hospital/all" method="get">
+                <form action="/hospital/list/all" method="get">
                     <button type="submit" class="btn btn-success">병원데이터 출력</button>
                 </form>
             </td>
